// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form size-36"
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    onChange={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="text"
    value="test"
  />
</div>
`;

exports[`TextInput should be rendered correctly with extra props 1`] = `
<div
  className="container uui-input-box -clickable root size-60 mode-form size-60"
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    onChange={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="text"
    value="test"
  />
  <div
    className="container uui-icon uui-enabled -clickable uui-icon-accept"
    onClick={[MockFunction]}
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
  <div
    className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
    onClick={[Function]}
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
  <div
    className="container uui-icon uui-enabled pointer"
    style={Object {}}
  >
    <svg
      className="flipY"
    />
  </div>
</div>
`;
